--- a/examples/async-test/build.gradle
+++ b/examples/async-test/build.gradle
@@ -22,12 +22,16 @@ dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.13'
     compile "com.mashape.unirest:unirest-java:1.4.9"
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '23.0'
+
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:3.8.2'
+
 
     // https://mvnrepository.com/artifact/org.asynchttpclient/async-http-client
     compile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.4.5'
