--- a/examples/hello-world-micronaunt/build.gradle
+++ b/examples/hello-world-micronaunt/build.gradle
@@ -5,14 +5,14 @@ plugins {
     id "net.ltgt.apt-idea" version "0.18"
 }
 
-apply plugin:"application"
-apply plugin:"java"
+apply plugin: "application"
+apply plugin: "java"
 
 version "0.1"
 group "hello.world.micronaunt"
 
-sourceCompatibility=JavaVersion.VERSION_1_8
-targetCompatibility=JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenLocal()
@@ -29,17 +29,22 @@ dependencyManagement {
 dependencies {
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
-    compile "io.micronaut:micronaut-inject"
-    compile "io.micronaut:micronaut-validation"
-    compile "io.micronaut:micronaut-runtime"
+    annotationProcessor "io.micronaut.configuration:micronaut-openapi"
     compile "io.micronaut:micronaut-http-client"
-    compile "javax.annotation:javax.annotation-api"
     compile "io.micronaut:micronaut-http-server-netty"
+    compile "io.micronaut:micronaut-inject"
+    compile "io.micronaut:micronaut-runtime"
+    compile "io.micronaut.configuration:micronaut-hibernate-validator"
+
+    compile "io.swagger.core.v3:swagger-annotations:2.0.4"
     compileOnly "io.micronaut:micronaut-inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
-    testCompile "junit:junit:4.12"
     testCompile "io.micronaut:micronaut-inject-java"
-    testCompile "org.hamcrest:hamcrest-all:1.3"
+    testCompile "io.micronaut.test:micronaut-test-junit5:1.0.1"
+    testCompile "org.mockito:mockito-junit-jupiter:2.22.0"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.1.0"
+
+
 }
 
 shadowJar {
@@ -49,7 +54,7 @@ shadowJar {
 run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
 
 mainClassName = "hello.world.micronaunt.Application"
-tasks.withType(JavaCompile){
+tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
     options.compilerArgs.add('-parameters')
 }
